# study-cmake

./: .editorconfig  .gitignore  .version.cmake  CMakeLists.txt  README.md  b.sh  version.h.in  zb.sh
.github/workflows/: cmake.yml
cmake/: add-policies.cmake  cxx-detect-compilers.cmake  detect-cxx-compilers.cmake  detect-systems.cmake  gen-versions.cmake  info.cmake  load-flex.cmake  load-llvm.cmake  modules-dir.md  prerequisites.cmake  setup-build-env.cmake  target-dirs.cmake  utils.cmake  version-def.cmake  version.h.in  versions-gen.cmake
lib/: .gitignore
tmpl/: CMakeLists.txt  README.md
z01-hello-1/: CMakeLists.txt  CmakeLists.txt  main.cc
z02-library-1/: CMakeLists.txt  CmakeLists.txt  library.cc  main.cc
z02-library-1/include/muchs/: muchs.hh
z03-library-2/: CMakeLists.txt  CmakeLists.txt  library.cc  main.cc
z03-library-2/include/mucht/: mucht.hh
z04-header-library/: CMakeLists.txt  CmakeLists.txt  main.cc
z04-header-library/include/monid/: monid.h
z10-modern-1/: README.md
z10-modern-1/app/: CMakeLists.txt  main.cc
z10-modern-1/my_library/: CMakeLists.txt  install.sh  uninstall.sh
z10-modern-1/my_library/include/my_library/: my_library.h
z10-modern-1/my_library/src/: opencv_funcs.cc
z11-m1/: CMakeLists.txt  README.md
z11-m1/app/: CMakeLists.txt  README.md  main.cc
z11-m1/app-auto/: CMakeLists.txt  main.cc
z11-m1/app-auto/tests/: CMakeLists.txt  main.cc
z11-m1/libs/: CMakeLists.txt
z11-m1/libs/sm-lib/: CMakeLists.txt
z11-m1/libs/sm-lib/cmake/: sm-libConfig.cmake
z11-m1/libs/sm-lib/include/sm-lib/: sm-lib.hh
z11-m1/libs/sm-lib/src/: sm-lib.cc
z11-m1/libs/sm-lib/tests/: CMakeLists.txt  main.cc
